--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@
 #
 # PUBLIC sollte normaler Weise mit der Ausgabe von $_SERVER['DOCUMENT_ROOT'] übereinstimmer, 
 # und nicht die Ausgabe von __DIR__ , ansonsten wäre es eine Sicherheitslücke ...
-PROJEKT=__PROJEKT__
+PROJEKT="ecxod/debug"
 WDRIVE="/home/christian/wdrive"
 WORKSPACE="${WDRIVE}/${PROJEKT}"
 PUBLIC="${WORKSPACE}/public"
