--- a/.env
+++ b/.env
@@ -10,6 +10,7 @@
 # und nicht die Ausgabe von __DIR__ , ansonsten wäre es eine Sicherheitslücke ...
 PROJEKT="ecxod/debug"
 WDRIVE="/home/christian/wdrive"
+PROJEKT_ROOT="${WDRIVE}/${PROJEKT}"
 WORKSPACE="${WDRIVE}/${PROJEKT}"
 PUBLIC="${WORKSPACE}/public"
 STATIC="${PUBLIC}/static"
